<resources>
    <string name="app_name">rentme</string>

    <string name="str_home">Home</string>
    <string name="str_upload">Upload</string>
    <string name="str_profile">Profile</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_location">Location</string>
    <string name="str_select_location">Select location</string>
    <string name="str_since">Since</string>
    <string name="str_lifetime">Lifetime:</string>
    <string name="str_daily">daily</string>
    <string name="str_weekly">weekly</string>
    <string name="str_monthly">monthly</string>
    <string name="str_min">min:</string>
    <string name="str_day">day</string>
    <string name="str_max">max:</string>
    <string name="str_month">month</string>
    <string name="str_months">months</string>
    <string name="str_next">Next</string>
    <string name="str_features">Features</string>
    <string name="str_start_date">Start date</string>
    <string name="str_end_date">End date</string>
    <string name="str_lifetime_min">Lifetime(min)</string>
    <string name="str_type">Type</string>
    <string name="str_model">Model</string>
    <string name="str_modelYear">Model Year</string>
    <string name="str_min_pictures">(min 2 pictures)</string>
    <string name="str_year_manufacture">Year of manufacture</string>
    <string name="str_management_system">Management system</string>
    <string name="str_mechanical">mechanical</string>
    <string name="str_automatic">automatic</string>
    <string name="str_fuel">Fuel</string>
    <string name="str_petrol">petrol</string>
    <string name="str_petrol_gas">petrol/gas</string>
    <string name="str_prices">Prices:</string>
    <string name="str_additional_features">Additional features</string>
    <string name="str_radio">radio</string>
    <string name="str_conditioner">conditioner</string>
    <string name="str_cost">Cost</string>
    <string name="str_colors">Colors</string>
    <string name="str_color">Color</string>
    <string name="str_save">Save</string>
    <string name="str_result">Result</string>
    <string name="str_clear">Clear</string>
    <string name="str_description">Description</string>

    //sherzod
    <string name="str_hello_blank_fragment">Hello blank fragment</string>
    <string name="str_choose_language">Choose the language</string>
    <string name="str_uzbek_language">Uzbek</string>
    <string name="str_english_language">English</string>
    <string name="str_russian_language">Russian</string>
    <string name="str_phone_number">PHONE NUMBER</string>
    <string name="str_logIn_update">Log In</string>


    <string-array name="cars_type">
        <item>Sedan</item>
        <item>Yuk Mashina</item>
        <item>velosiped</item>
        <item>Mototsikl</item>
    </string-array>

    <string-array name="cars_model">
        <item>Malibu</item>
        <item>Lasetti</item>
        <item>Damas</item>
        <item>Matiz</item>
        <item>Nexia 3</item>
        <item>Nexia 2</item>
        <item>Eqvinox</item>
        <item>Tracker</item>
    </string-array>

    <string-array name="cars_year">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>

    <string name="str_search_hint_auto_type">Search auto type</string>
    <string name="str_select_your_location">Select your location</string>
    <string name="str_search_hint_location">Search location</string>
    <string name="str_show_all">shaw all</string>
    <string name="str_latest_offers">Latest Offers</string>
    <string name="str_daily_offers">Daily Offers</string>
    <string name="str_long_term_offers">Long Term Offers</string>
    <string name="str_logIn_page">Log In</string>
    <string name="str_continue">Continue</string>
    <string name="str_send_sms">Send SmS</string>
    <string name="str_information">Fill information</string>
    <string name="str_first_name">Firstname</string>
    <string name="str_last_name">Lastname</string>
    <string name="str_email">Email</string>
    <string name="str_skip">Skip?</string>
    <string name="str_optional">(Optional)</string>
    <string name="str_registration">Registration</string>
    <string name="str_pictures">Pictures</string>
    <string name="str_my_adds">My adds</string>
    <string name="str_view_all">View all</string>
    <string name="str_current_location">Current Location</string>
    <string name="str_history">History</string>
    <string name="str_select_start_date">Select start date</string>
    <string name="str_enter_year">enter year</string>
    <string name="str_som">som</string>
    <string name="str_fill_all_fields">Please, fill in all the Fields</string>
    <string name="str_days">days</string>
    <string name="str_price_day">/day</string>
    <string name="str_price_month">/month</string>
    <string name="str_call">Call</string>
    <string name="str_enter_description">Enter description</string>
    <string name="str_brands">Brands</string>
    <string name="str_price_line">/</string>

</resources>