<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:id="@+id/bottom_sheet_localization"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_choose_language"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:id="@+id/uzb_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_language_localization"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="35dp"
                    android:src="@drawable/flag_uzb"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_uzbek_language"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:textStyle=""
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/eng_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_language_localization"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="35dp"
                    android:src="@drawable/flag_english"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_english_language"
                    android:textColor="@color/black"

                    android:padding="10dp"
                    android:textStyle=""
                    android:textSize="16sp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rus_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_language_localization"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="35dp"
                    android:src="@drawable/flag_rus"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"/>

                <TextView
                    android:fontFamily="sans-serif-condensed-medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_russian_language"
                    android:textColor="@color/black"
                    android:padding="10dp"
                    android:textStyle=""
                    android:textSize="16sp"/>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>



