<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.location.SelectLocationFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_back"
                    android:src="@drawable/ic_back_black"
                    app:tint="@color/black"
                    android:layout_width="25dp"
                    android:layout_height="25dp"/>

                <TextView
                    android:layout_marginStart="10dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="@string/str_select_your_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <EditText
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_corner_rounded"
            android:drawableStart="@drawable/ic_search"
            android:drawableEnd="@android:drawable/ic_menu_close_clear_cancel"
            android:drawableTint="@color/orange_main_01"
            android:layout_marginTop="15dp"
            android:drawablePadding="10dp"
            android:hint="@string/str_search_hint_location"
            android:minHeight="48dp"
            android:paddingHorizontal="15dp"
            android:textSize="@dimen/text_type_18"/>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888"/>

        <LinearLayout
            android:id="@+id/ll_current_location"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_marginHorizontal="15dp"
                android:src="@drawable/ic_my_location"
                app:tint="@color/orange_main_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_current_location"
                android:text="@string/str_current_location"
                android:textColor="@color/black"
                android:textSize="@dimen/text_type_18"
                android:textStyle="normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#888888"/>

        <TextView
            android:text="@string/str_history"
            android:textSize="@dimen/b_text_16"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_searches"
            tools:listitem="@layout/item_search_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>